Use .get(0) as getFirst() doesn't exist in 8.18 (probably JDK difference?)